[기능 수정] cors 로직 수정